<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/backBeer"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shotprom">
    <LinearLayout
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@color/black_overlay">
            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                ads:adSize="BANNER"
                ads:adUnitId="@string/BottomB"
                android:layout_gravity="center">
            </com.google.android.gms.ads.AdView>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/contItem1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/buttonItem1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/beer"
                android:textSize="@dimen/abc_text_size_display_3_material"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:elegantTextHeight="false"
                android:textColor="@android:color/background_light"
                android:background="@color/black_overlay" />
            <NumberPicker
                android:id="@+id/cenaItem1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contextClickable="false"
                android:focusableInTouchMode="true"
                android:focusable="true"
                android:background="@color/black_overlay"></NumberPicker>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/contItem2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/buttonItem2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/shot"
                android:textSize="@dimen/abc_text_size_display_3_material"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:textColor="@android:color/background_light"
                android:background="@color/black_overlay" />
            <NumberPicker
                android:id="@+id/cenaItem2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contextClickable="false"
                android:focusableInTouchMode="true"
                android:focusable="true"
                android:background="@color/black_overlay"></NumberPicker>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView android:text="@string/total"
                android:id="@+id/total"
                android:textSize="@dimen/abc_action_bar_progress_bar_size"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@android:color/background_light"
                android:layout_weight="2"
                android:gravity="fill_vertical" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/limit"
                android:textColor="@android:color/background_light"
                android:textSize="@dimen/abc_action_button_min_width_overflow_material"
                android:gravity="center_vertical"/>
            <EditText
                android:id="@+id/EditLimit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/limit_help"
                android:numeric="integer"
                android:textColor="@android:color/background_light"
                android:enabled="false"
                android:imeOptions="actionGo"
                android:textSize="@dimen/abc_action_button_min_width_overflow_material"
                android:gravity="center_vertical" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
